Fully Functioning Responsive Header, Fixed Layout on Mobile

--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ text-align: center;
 
 display: flex;
 flex-direction: row;
-flex-wrap: wrap;
+flex-wrap: no-wrap;
 justify-content: space-evenly;
 align-items: center;
 
@@ -290,24 +290,28 @@ display: none;
       }
     
 
-    .mobileOpen {
-    
-        display: block;
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: whitesmoke;
-    top: 35px;
-    left: 0;
-    text-align: center;
+      .mobileOpen {
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: calc(100vh - 35px);
+        background: whitesmoke;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 0;
     }
+    
+    
 
     #header-nav-ul.mobileOpen {
         
-        margin-top: 15px;
-        padding-bottom: 100%;
+        margin: 15px auto 0 auto;
+        bottom: 0;
+        padding-bottom: 100vh;
         max-height: 200px;
-    padding-top: 25px;
+        padding-top: calc(var(--header-height) + 40px);
         display: flex;
         justify-content: space-evenly;
         flex-direction: column;
@@ -316,7 +320,7 @@ display: none;
     
 
     #header-nav-ul.mobileOpen li {
-        
+        flex-grow: 1;
 display: inline-block;
 margin: 0 auto;
 
@@ -363,5 +367,15 @@ padding:20px;
 
 }
 
-            
+  @media (max-width:297px) {
+    
+    #header-nav-ul.mobileOpen {
+    
+    margin-top: 25px;
+        
+    }
+
+  }  
+  
+  
             
